--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-AV1C645\\SQLEXPRESS;Initial Catalog=DBProjects;Integrated Security=True;"
+  },
   "AllowedHosts": "*"
 }
