изменил модели и контекст

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-AV1C645\\SQLEXPRESS;Initial Catalog=DBProjects;Integrated Security=True;"
+    "DefaultConnection": "Data Source=DESKTOP-AV1C645\\SQLEXPRESS;Initial Catalog=DbProject;Integrated Security=True;"
   },
   "AllowedHosts": "*"
 }
